inizio parole palindrome

--- a/palindromi/index.html
+++ b/palindromi/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>js-pari-o-dispari-funzioni</title>
+    <title>js-parole-palindrome</title>
 </head>
 <body>
   
